# tradehunt-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: test.yml  test.yml.disabled
agents/: pyproject.toml
agents/src/: main.py
agents/src/api/: __init__.py  client.py
agents/src/backtesting/: __init__.py  engine.py
agents/src/data/: covalent.py  market_data.py  pyth_feed.py
agents/src/execution/: __init__.py  bybit_client.py  bybit_mcp.py  risk_manager.py
agents/src/llm/: __init__.py  decision_engine.py  persona_prompt.py
agents/src/personas/: __init__.py  aggressive.py  arbitrageur.py  base.py  conservative.py  sentiment.py
agents/src/strategies/: __init__.py  grid_trading.py  indicators.py  macro_swing.py  mean_reversion.py  momentum.py
agents/tests/: test_llm_and_backtesting.py  test_personas.py  test_risk_manager.py  test_strategies.py
api/: __init__.py  alembic.ini  pyproject.toml
api/src/: config.py  main.py
api/src/db/: database.py  models.py
api/src/db/migrations/: env.py
api/src/routes/: agents.py  arena.py  trades.py
api/src/services/: arena_contract_bridge.py  arena_service.py  contract_bridge.py  scoring.py
api/src/ws/: manager.py
api/tests/: conftest.py  test_agents_api.py  test_arena_scoring.py  test_contract_bridge.py  test_main.py
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AgentIdentity.sol  ArenaLeaderboard.sol  ERC8004Registry.sol  TradeRegistry.sol  (+1 more)
docs/: MEMORY.md  WORKFLOW.md
frontend/: index.html  package.json
(+48 files in other folders)
