[project]
name = "tradehunt-agents"
version = "0.1.0"
description = "AI trading hunter agents with quant personas"
requires-python = ">=3.12"
dependencies = [
    "pybit>=5.16.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2",
    "httpx>=0.27",
    "web3>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]
